# command_tracker

./: .gitignore  .gitignoreecho  README.md  clear_db.py  cmd_database.py  history.py  main.py  pyproject.toml  requirements.txt  setup.sh  showcmm.1  theme.py  uninstall.sh  view_history.py
